new pages and new links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Main Menu (449):</h3>
+          <h3>Main Menu (489):</h3>
           <ul>
           <li><a href="conferences.html">Conferences</a> (45)</li>
           <li><a href="bsd-flavors.html">BSD Flavors</a> (13)</li>
@@ -34,10 +34,10 @@
           <li><a href="magazines.html">Magazines</a> (24)</li>
           <li><a href="moble-os.html">Moble Operating Systems</a> (4)</li>
           <li><a href="podcasts.html">Netcasts, Oggcasts, Podcasts, Webcasts</a> (96)</li>
+          <li><a href="non-foss.html">NON-FOSS Links</a> (93)</li>
           <li><a href="online-courses.html">Online Courses</a> (45)</li>
           <li><a href="blogs.html">Open Source Tech Blogs, Howtos, Guides, and Tutorials</a> (7)</li>
           <li><a href="python-programming.html">Python Programming</a> (57)</li>
-          <li><a href="t-bucket.html">The T-Bucket Project</a> (52)</li>
           <li><a href="video-gaming.html">Video Gaming: Linux</a> (27)</li>
           </ul>
 	  <br />
@@ -80,7 +80,7 @@
 	       
 	       
 	         <div id="footer"> 
-	           <p>Copyleft &copy; 2006-2016 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>   
+	           <p>Copyleft &copy; 2006-2017 monsterb | daemons, gnus, and penguins. Oh my! | CSS3 &#10003; HTML5 &#10003;</p>   
 	         </div>
 	  </div>
   </body>
