--- a/intermodal.html
+++ b/intermodal.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Magazines</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Drayage and Intermodal</title>
   </head>
    <body>
     <div id="container">
@@ -21,76 +21,94 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Magazines (24):</h3>
-          <br />
+          <h3>Drayage and Intermodal (40):</h3>
           <ul>
-          <li><a href="magazines.html#BSD">BSD</a> (2)</li>
-          <li><a href="magazines.html#Electronics">Electronics</a> (1)</li>
-          <li><a href="magazines.html#GNU">GNU/Linux</a> (5)</li>
-          <li><a href="magazines.html#InfoSec">Information Security</a> (9)</li>
-          <li><a href="magazines.html#Open">Open Source</a> (1)</li>
-          <li><a href="magazines.html#Programming">Programming</a> (2)</li>
-          <li><a href="magazines.html#Pi">Raspberry Pi</a> (3)</li>
-          <li><a href="magazines.html#Tech">Technology</a> (1)</li>
+          <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
+          <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
+          <li><a href="intermodal.html#Magazines">Magazines</a> (4)</li>
+          <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
+          <li><a href="intermodal.html#Software">Software</a> (2)</li>
+          <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
+          <li><a href="intermodal.html#GOV">US Government Sites</a> (3)</li>
+          <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (6)</li>
           </ul>
           
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="BSD">BSD</a> (2):</h3>
-	  <p>BSD Magazine <a href="https://bsdmag.org/">https://bsdmag.org/</a></p>
-	  <p>FreeBSD Journal <a href="https://www.freebsdfoundation.org/journal">https://www.freebsdfoundation.org/journal</a></p>
+	  <h3><a id="Associations">Associations (4):</h3>
+	  <p>ATA - American Trucking Assoc. <a href="http://www.trucking.org/">http://www.trucking.org/</a></p>
+	  <p>IANA - Intermodal Assoc. of N. America <a href="https://www.intermodal.org/">https://www.intermodal.org/</a></p>
+	  <p>IMTA - IN Motor Truck Assoc. <a href="http://www.intrucking.org/">http://www.intrucking.org/</a></p>
+	  <p>OOIDA <a href="https://www.ooida.com/">https://www.ooida.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Electronics">Electronics</a> (1):</h3>
-	  <p>Everyday Practical Electronics <a href="http://www.epemag.com/">http://www.epemag.com/</a></p>
+	  <h3><a id="Blogs">Blogs and News (2):</h3>
+	  <p>American Shipper <a href="http://www.americanshipper.com/">http://www.americanshipper.com/</a></p>
+	  <p>Supply Chain 24/7 <a href="http://www.supplychain247.com/">http://www.supplychain247.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="GNU">GNU/Linux</a> (5):</h3>
-	  <p>Full Circle <a href="http://fullcirclemagazine.org/">http://fullcirclemagazine.org/</a></p>
-	  <p>Linux Format <a href="http://www.linuxformat.com/">http://www.linuxformat.com/</a></p>
-	  <p>Linux Magazine <a href="http://www.linux-magazine.com/">http://www.linux-magazine.com/</a></p>
-	  <p>Linux User &#38; Developer <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/LinuxUserAndDeveloper">http://www.imagine-publishing.co.uk/</a></p>
-	  <p>Linux Voice <a href="https://www.linuxvoice.com/">https://www.linuxvoice.com/</a></p>
+	  <h3><a id="Magazines">Magazines (4):</h3>
+	  <p>Heavy Duty Trucking <a href="http://www.truckinginfo.com/">http://www.truckinginfo.com/</a></p>
+	  <p>Logistics Management <a href="http://www.logisticsmgmt.com/">http://www.logisticsmgmt.com/</a></p>
+	  <p>Overdrive <a href="http://www.overdriveonline.com/">http://www.overdriveonline.com/</a></p>
+	  <p>Progressive Railroading <a href="http://www.progressiverailroading.com/">http://www.progressiverailroading.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="InfoSec">Information Security</a> (9):</h3>
-	  <p>2600: The Hacker Quarterly <a href="http://www.2600.com/">http://www.2600.com/</a></p>
-          <p>Digital Forensics Magazine <a href="http://www.digitalforensicsmagazine.com/">http://www.digitalforensicsmagazine.com/</a></p>
-          <p>eForensics <a href="https://eforensicsmag.com/">https://eforensicsmag.com/</a></p>
-          <p>Hacker Monthly <a href="http://hackermonthly.com/">http://hackermonthly.com/</a></p>
-          <p>Hakin9 <a href="https://hakin9.org/">https://hakin9.org/</a></p>
-          <p>&#91;HACK&#93;IN&#40;SIGHT&#41; <a href="http://www.hackinsight.org/">http://www.hackinsight.org</a></p>
-          <p>Infosecurity Magazine <a href="http://www.infosecurity-magazine.com/">http://www.infosecurity-magazine.com/</a></p>
-          <p>&#40;IN&#41;SECURE Magazine <a href="http://www.net-security.org/insecuremag.php">http://www.net-security.org/insecuremag.php</a></p>
-          <p>PenTest Magazine <a href="https://pentestmag.com/">https://pentestmag.com/</a></p>
-          
-	  <br /><br /><br /><br />
-	  
-	  <h3><a id="Open">Open Source</a> (1):</h3>
-	  <p>Open Source For You <a href="http://opensourceforu.efytimes.com/">http://opensourceforu.efytimes.com/</a></p>
+	  <h3><a id="Railroads">Railroads (7):</h3>
+	  <p>BNSF <a href="http://www.bnsf.com/">http://www.bnsf.com/</a></p>
+	  <p>Canadian National <a href="https://www.cn.ca/">https://www.cn.ca/</a></p>
+	  <p>Canadian Pacific <a href="http://www.cpr.ca/en">http://www.cpr.ca/en</a></p>
+	  <p>CSX <a href="https://www.csx.com/">https://www.csx.com/</a></p>
+	  <p>Indiana Railroad Co. <a href="http://www.inrd.com/">http://www.inrd.com/</a></p>
+	  <p>Norfolk Southern <a href="http://www.nscorp.com/">http://www.nscorp.com/</a></p>
+	  <p>Union Pacific <a href="http://www.up.com/">http://www.up.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Programming">Programming</a> (2):</h3>
-	  <p>CODE Magazine <a href="http://www.codemag.com/Magazine">http://www.codemag.com/Magazine</a></p>
-	  <p>Software Developer's Journal <a href="http://sdjournal.org/">http://sdjournal.org/</a></p>
-	  
-	  <br /><br /><br /><br />
-	  
-	  <h3><a id="Pi">Raspberry Pi</a> (3):</h3>
-	  <p>MagPi <a href="https://www.raspberrypi.org/magpi/">https://www.raspberrypi.org/magpi/</a></p>
-	  <p>Raspberry Pi Geek <a href="http://www.raspberry-pi-geek.com/">http://www.raspberry-pi-geek.com/</a></p>
-	  <p>Raspi <a href="http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi">http://www.imagine-publishing.co.uk/portfolio/magazines/Raspi</a></p>
-	  
-	  <br /><br /><br /><br />
-	  
-	  <h3><a id="Tech">Technology</a> (1):</h3>
-	  <p>ADMIN Magazine <a href="http://www.admin-magazine.com/">http://www.admin-magazine.com/</a></p>
-	  
+	  <h3><a id="Software">Software (2):</h3>
 	  <br />
+	  <p><a href="http://gnucash.org/">GnuCash</a> is personal and small-business financial-accounting software designed to be easy to use, yet powerful and flexible, GnuCash allows you to track bank accounts, stocks, income and expenses. As quick and intuitive to use as a checkbook register, it is based on professional accounting principles to ensure balanced books and accurate reports. GNUCash is freely licensed under the GNU GPL and available for Android, BSD, GNU/LInux, Solaris, OSX and Windows.</p>
+	  <br />
+	  <p><a href="https://kmymoney.org/">KMyMoney</a> strives to be the easiest open source personal finance manager to use, especially for the non-technical user.</p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Classifieds">Truck Classifieds and Dealers (12):</h3>
+	  <p>Commercial Truck Trader <a href="http://www.commercialtrucktrader.com/">http://www.commercialtrucktrader.com/</a></p>
+	  <p>House of Trucks <a href="http://hottrucks.com/">http://hottrucks.com/</a></p>
+	  <p>Idealease <a href="http://www.idealeaseusedtrucks.com/">http://www.idealeaseusedtrucks.com/</a></p>
+	  <p>International Used Trucks <a href="http://www.internationalusedtrucks.com/">http://www.internationalusedtrucks.com/</a></p>
+	  <p>NationaLease <a href="http://www.nationalease.com/used-trucks/">http://www.nationalease.com/used-trucks/</a></p>
+	  <p>Penske <a href="https://www.penskeusedtrucks.com/">https://www.penskeusedtrucks.com/</a></p>
+	  <p>Rush Truck Centers <a href="http://www.rushtruckcenters.com/">http://www.rushtruckcenters.com/</a></p>
+	  <p>Ryder <a href="https://usedtrucks.ryder.com/">https://usedtrucks.ryder.com/</a></p>
+	  <p>Schneider <a href="http://www.schneidertrucks.com/">http://www.schneidertrucks.com/</a></p>
+	  <p>Swift <a href="http://www.swifttrans.com/what-we-do/equipment-leasing-and-sales">http://www.swifttrans.com/what-we-do/equipment-leasing-and-sales</a></p>
+	  <p>TruckerToTrucker.com <a href="https://www.truckertotrucker.com/">https://www.truckertotrucker.com/</a></p>
+	  <p>Truck Paper <a href="http://www.truckpaper.com/">http://www.truckpaper.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="GOV">US Government Sites (3):</h3>
+	  <p>FMCSA - Fed. Motor Carrier Safety Admin. <a href="https://www.fmcsa.dot.gov/">https://www.fmcsa.dot.gov/</a></p>
+	  <p>Indiana BMV <a href="http://www.in.gov/bmv/index.htm">http://www.in.gov/bmv/index.htm</a></p>
+	  <p>US DOT <a href="https://www.transportation.gov/">https://www.transportation.gov/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Drayage">US Midwest Drayage Companies (6):</h3>
+	  <p>ContainerPort Group <a href="http://www.containerport.com/">http://www.containerport.com/</a></p>
+	  <p>FORE Transportation <a href="http://www.foretransportation.com/">http://www.foretransportation.com/</a></p>
+	  <p>Hub Group <a href="http://www.hubgroup.com/">http://www.hubgroup.com/</a></p>
+	  <p>Reliable Transportation <a href="http://www.reliabletrans.com/">http://www.reliabletrans.com/</a></p>
+	  <p>RoadOne <a href="http://www.roadone.com/">http://www.roadone.com/</a></p>
+	  <p>XPO Logistics <a href="http://www.xpologistics.com/">http://www.xpologistics.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
 
 	     </div>
 	       <div id="favorites">
