--- a/non-foss.html
+++ b/non-foss.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Illumos Distributions</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | NON-FOSS Links</title>
   </head>
    <body>
     <div id="container">
@@ -21,25 +21,15 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Illumos Distributions (6):</h3>
+          <h3>NON-FOSS Links (93):</h3>
+          <ul>
+          <li><a href="intermodal.html">Drayage and Intermodal</a> (40)</li>
+          <li><a href="t-bucket.html">The T-Bucket Project</a> (53)</li>
+          </ul>
           
 	  <br />
-	  <p><a href="http://www.dilos.org/">DilOS</a> is a illumos based platform with Debian package manager (dpkg+apt).</p>
-	  <br /><br />
-	  <p><a href="http://osdyson.org/">Dyson</a> (Debian GNU/kOpenSolaris) is a general-purpose operating system, a Debian derivative using illumos kernel, libc, and SMF init system.</p>
-	  <br /><br />
-	  <p><a href="http://www.openindiana.org/">OpenIndiana</a> is a free and open-source, Unix operating system derived from OpenSolaris.</p>
-	  <br /><br />
-	  <p><a href="https://smartos.org/">SmartOS</a> is a "live OS", it is always booted via PXE, ISO, or USB Key and runs entirely from memory, allowing the local disks to be used entirely for hosting virtual machines without 
-	  wasting disks for the root OS.</p>
-     <br /><br />
-     <p><a href="http://www.tribblix.org/">Tribblix</a> is an operating system distribution derived from OpenSolaris, OpenIndiana, and Illumos, with a retro style and modern components. The base kernel and commands are from 
-     Illumos, with the parts of the base OS that aren't provided by Illumos currently repackaged from OpenIndiana (including X11); pretty much everything above that is (or soon will be) rebuilt 
-     from scratch.</p>
-     <br /><br />
-     <p>XStreamOS, XStream Desktop, and XStream Server are <a href="http://sonicle.com/">Sonicle</a> effort to mantain a distribution of the illumos kernel, featuring a customized text install, the ZFS fileystem, Crossbow network architecture, 
-     virtualization, zones, and a starting point to contribute and develop the illumos kernel.</p>
-     <br />
+	  
+
 	     </div>
 	       <div id="favorites">
 	       <h3>Favorites:</h3>
