--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage and Intermodal (40):</h3>
+          <h3>Drayage and Intermodal (41):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
@@ -86,13 +86,14 @@
 	  <p>Rush Truck Centers <a href="http://www.rushtruckcenters.com/">http://www.rushtruckcenters.com/</a></p>
 	  <p>Ryder <a href="https://usedtrucks.ryder.com/">https://usedtrucks.ryder.com/</a></p>
 	  <p>Schneider <a href="http://www.schneidertrucks.com/">http://www.schneidertrucks.com/</a></p>
-	  <p>Swift <a href="http://www.swifttrans.com/what-we-do/equipment-leasing-and-sales">http://www.swifttrans.com/what-we-do/equipment-leasing-and-sales</a></p>
+	  <p>Swift <a href="http://www.swifttrans.com/what-we-do/equipment-leasing-and-sales">http://www.swifttrans.com/</a></p>
 	  <p>TruckerToTrucker.com <a href="https://www.truckertotrucker.com/">https://www.truckertotrucker.com/</a></p>
 	  <p>Truck Paper <a href="http://www.truckpaper.com/">http://www.truckpaper.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="GOV">US Government Sites (3):</h3>
+	  <h3><a id="GOV">US Government Sites (4):</h3>
+	  <p>Commercial Driver License Manual <a href="http://www.in.gov/bmv/files/CDL_Manual.pdf">http://www.in.gov/bmv/files/CDL_Manual.pdf</a> pdf</p>
 	  <p>FMCSA - Fed. Motor Carrier Safety Admin. <a href="https://www.fmcsa.dot.gov/">https://www.fmcsa.dot.gov/</a></p>
 	  <p>Indiana BMV <a href="http://www.in.gov/bmv/index.htm">http://www.in.gov/bmv/index.htm</a></p>
 	  <p>US DOT <a href="https://www.transportation.gov/">https://www.transportation.gov/</a></p>
