--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage and Intermodal (41):</h3>
+          <h3>Drayage and Intermodal (42):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
@@ -29,7 +29,7 @@
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
-          <li><a href="intermodal.html#GOV">US Government Sites</a> (4)</li>
+          <li><a href="intermodal.html#GOV">US Government Sites</a> (5)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (6)</li>
           </ul>
           
@@ -92,8 +92,9 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="GOV">US Government Sites (4):</h3>
+	  <h3><a id="GOV">US Government Sites (5):</h3>
 	  <p>Commercial Driver License Manual <a href="http://www.in.gov/bmv/files/CDL_Manual.pdf">http://www.in.gov/bmv/files/CDL_Manual.pdf</a> pdf</p>
+	  <p>Commercial Motor Vehicle Guidebook <a href="http://www.in.gov/dor/files/cmvg.pdf">http://www.in.gov/dor/files/cmvg.pdf</a> pdf</p>
 	  <p>FMCSA - Fed. Motor Carrier Safety Admin. <a href="https://www.fmcsa.dot.gov/">https://www.fmcsa.dot.gov/</a></p>
 	  <p>Indiana BMV <a href="http://www.in.gov/bmv/index.htm">http://www.in.gov/bmv/index.htm</a></p>
 	  <p>US DOT <a href="https://www.transportation.gov/">https://www.transportation.gov/</a></p>
