added new page and links

--- a/intermodal.html
+++ b/intermodal.html
@@ -21,10 +21,12 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage and Intermodal (42):</h3>
+          <h3>Drayage, Intermodal, and Transportation (50):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
+          <li><a href="intermodal.html#Biz">Forming Your Indiana Business</a> (3)</li>
+          <li><a href="intermodal.html#HAzMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (4)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
@@ -49,6 +51,25 @@
 	  
 	  <br /><br /><br /><br />
 	  
+	  <h3><a id="Biz">Forming Your Indiana Business (3):</h3>
+	  <br />
+	  <p><a href="http://www.in.gov/sos/business/2428.htm">AN ENTREPRENEUR'S GUIDE TO STARTING A BUSINESS IN INDIANA</a> by Connie Lawson (Indiana Secretary of State).</p>
+	  <br />
+	  <p><a href="https://howtostartanllc.com/indiana-llc">Form an LLC in Indiana</a> by The Really Useful Information Company (TRUIC).</p>
+	  <br />
+	  <p><a href="http://www.wikihow.com/Form-an-LLC-in-Indiana">wikiHOW</a> Form an LLC in Indiana</p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="HazMat">Hazardous Material and Tanker Study Guides (5):</h3>
+	  <p>CDL Career Now <a href="https://www.cdlcareernow.com/cdl-practice-tests.php">https://www.cdlcareernow.com/cdl-practice-tests.php</a></p>
+	  <p>Driving-Tests.org <a href="http://driving-tests.org/indiana/">http://driving-tests.org/indiana/</a> 12 CDL Tests</p>
+	  <p>Trucker Country <a href="http://www.truckercountry.com/cdl-practice-tests/">http://www.truckercountry.com/cdl-practice-tests/</a></p>
+	  <p>Truckers Report <a href="http://www.thetruckersreport.com/cdl-practice-tests/">http://www.thetruckersreport.com/cdl-practice-tests/</a></p>
+	  <p>TruckingTruth <a href="http://www.truckingtruth.com/cdl-test/">http://www.truckingtruth.com/cdl-test/</a></p>
+	  
+	  <br /><br /><br /><br />
+        
 	  <h3><a id="Magazines">Magazines (4):</h3>
 	  <p>Heavy Duty Trucking <a href="http://www.truckinginfo.com/">http://www.truckinginfo.com/</a></p>
 	  <p>Logistics Management <a href="http://www.logisticsmgmt.com/">http://www.logisticsmgmt.com/</a></p>
