--- a/notes/index.html
+++ b/notes/index.html
@@ -21,7 +21,9 @@
 	     <a href="index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Notes (10):</h3>
+          <h3>Notes (11):</h3>
+          <br />
+          <p><a href="notes010.txt">notes010.txt</a> (20161114) HazMat Pratice Questions gathered from the interwebs.</p>
           <br />
           <p><a href="notes009.txt">notes009.txt</a> (20160313) Install Arch Linux (Alarm) on Raspberry Pi (ARMv6).</p>
           <br />
