fixed link error

--- a/intermodal.html
+++ b/intermodal.html
@@ -26,7 +26,7 @@
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Business</a> (3)</li>
-          <li><a href="intermodal.html#HAzMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
+          <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (4)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
