new links and dead links

--- a/intermodal.html
+++ b/intermodal.html
@@ -8,7 +8,7 @@
   	<link href="monsterborg.css" media="screen" rel="stylesheet" type="text/css" />
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.png" />
-   <title>monsterb | daemons, gnus, and penguins. Oh my! | Drayage and Intermodal</title>
+   <title>monsterb | daemons, gnus, and penguins. Oh my! | Drayage, Intermodal, Maritime, and Transportation</title>
   </head>
    <body>
     <div id="container">
@@ -21,13 +21,14 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, and Transportation (50):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (63):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Business</a> (3)</li>
           <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
-          <li><a href="intermodal.html#Magazines">Magazines</a> (4)</li>
+          <li><a href="intermodal.html#Magazines">Magazines</a> (8)</li>
+          <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
@@ -70,11 +71,28 @@
 	  
 	  <br /><br /><br /><br />
         
-	  <h3><a id="Magazines">Magazines (4):</h3>
+	  <h3><a id="Magazines">Magazines (8):</h3>
 	  <p>Heavy Duty Trucking <a href="http://www.truckinginfo.com/">http://www.truckinginfo.com/</a></p>
 	  <p>Logistics Management <a href="http://www.logisticsmgmt.com/">http://www.logisticsmgmt.com/</a></p>
+	  <p>Marine Insight <a href="http://www.marineinsight.com/">http://www.marineinsight.com/</a></p>
+	  <p>Maritime Executive <a href="http://www.maritime-executive.com/">http://www.maritime-executive.com/</a></p>
+	  <p>Maritime Journal <a href="http://www.maritimejournal.com/">http://www.maritimejournal.com/</a></p>
+	  <p>Maritime Reporter <a href="http://www.marinelink.com/">http://www.marinelink.com/</a></p>
 	  <p>Overdrive <a href="http://www.overdriveonline.com/">http://www.overdriveonline.com/</a></p>
 	  <p>Progressive Railroading <a href="http://www.progressiverailroading.com/">http://www.progressiverailroading.com/</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Ocean">Ocean Freight Companies (9):</h3>
+	  <p>APL <a href="https://www.apl.com/">https://www.apl.com/</a></p>
+	  <p>CMA CGM <a href="http://www.cma-cgm.com/">http://www.cma-cgm.com/</a></p>
+	  <p>Cosco Shipping <a href="http://www.cosco.com/">http://www.cosco.com/</a></p>
+	  <p>Crowley <a href="http://www.crowley.com/">http://www.crowley.com/</a></p>
+	  <p>Foss <a href="http://www.foss.com/">http://www.foss.com/</a></p>
+	  <p>"K" Line America <a href="http://www.kline.com/">http://www.kline.com/</a></p>
+	  <p>Maersk Line <a href="http://www.maerskline.com/">http://www.maerskline.com/</a></p>
+	  <p>Mediterranean Shipping Company <a href="https://www.msc.com/">https://www.msc.com/</a></p>
+	  <p>TOTE Maritime <a href="http://www.totemaritime.com/">http://www.totemaritime.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
