--- a/non-foss.html
+++ b/non-foss.html
@@ -21,9 +21,9 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>NON-FOSS Links (103):</h3>
+          <h3>NON-FOSS Links (116):</h3>
           <ul>
-          <li><a href="intermodal.html">Drayage, Intermodal, and Transportaion</a> (50)</li>
+          <li><a href="intermodal.html">Drayage, Intermodal, Maritime, and Transportaion</a> (63)</li>
           <li><a href="t-bucket.html">The T-Bucket Project</a> (53)</li>
           </ul>
           
