--- a/ocp/members.html
+++ b/ocp/members.html
@@ -25,9 +25,9 @@
 	  <br />
 
 <ul>
- <li> <h4><a href="http://unseenstudio.co.uk/category/crivins-ogg/">Crivins</a></h4>
+ <li><h4>Crivins (Dead)</h4>
   <p>A Linux / FOSS show with a strong Scottish flavour hosted by ThistleWeb and Kevie. This show carries a strong language warning.</p>
-  <h4><a href="http://unseenstudio.co.uk/category/ccjam-ogg/feed/">Ogg Feed</a></h4></li>
+  <h4>Ogg Feed (Dead)</h4></li>
   
   <li><h4><a href="http://deadbeatguitarist.com">Deadbeat Guitarist Mugcast</a></h4>
   <p>A disorganized stream of beer consciousness hosted by a man now to lazy to play guitar because the call of the brew is too strong. Hear him ramble on
@@ -57,7 +57,7 @@
   to do one show, that's great too. Tune in and listen, or submit a show so everyone can listen. May contain explicit material (dirty words) ;) All episodes can be downloaded from the <a href="https://archive.org/details/@juicedpenguin">Internet Archive</a>.</p>
   <h4>Ogg Feed (Dead)</h4></li>
   
- <li> <h4><a href="http://kernelpanicoggcast.net">Kernelpanic Oggcast</a></h4>
+ <li><h4><a href="http://kernelpanicoggcast.net">Kernelpanic Oggcast</a></h4>
   <p>Maybe some of you have heard of the Linux Cranks? Maybe not, either way come join six of the old hosts each fortnight as they discuss all the latest linux news, linux gadgets and whatever 
   else pops up. Be that basket weaving, fishing, woodworking, recipes, you name it. The Kernelpanic Oggcast is recorded "Live" every fortnight from the KPO Studios @ 10pm EST (give or take) Saturdays, Sunday Arvo's for the Ozzies.</p>
   <h4><a href="http://www.kernelpanicoggcast.net/rss.xml">Ogg Feed</a></h4></li>
@@ -75,24 +75,24 @@
   <h4>Ogg Feed (Dead)</h4>
   <h4>Speex Feed (Dead)</h4></li>
   
- <li> <h4><a href="http://mythtvcast.com">MythTV Cast</a></h4>
+ <li><h4><a href="http://mythtvcast.com">MythTV Cast</a></h4>
   <p>This show is about MythTV. MythTV is an open-source PVR that allows you to record tv programs (and filter out all the commercials) as well as manage all your media: your photos, music, 
   and dvd collection. We will explore all of these features and more throughout this podcast. Please join us as explore this wonderful application.</p>
   <h4><a href="http://feeds.feedburner.com/MythtvCast">Ogg Feed</a></h4></li>
   
- <li> <h4><a href="gopher://gopher.info-underground.net/1/lostnbronx/palaver">Palaver</a></h4>
+ <li><h4><a href="gopher://gopher.info-underground.net/1/lostnbronx/palaver">Palaver</a></h4>
   <p>The incoherant babblings of lostnbronx.</p>
   <h4><a href="http://gopher.info-underground.net:70/lostnbronx/palaver/palaver-ogg-rss.xml">Ogg Feed</a></h4>
   <h4><a href="http://gopher.info-underground.net:70/lostnbronx/palaver/palaver-spx-rss.xml">Speex Feed</a></h4></li>
   
- <li> <h4><a href="http://techandloathing.info/">Tech and Loathing</a></h4>
+ <li><h4><a href="http://techandloathing.info/">Tech and Loathing</a></h4>
   <p>One Tech Over The Line</p>
   <h4><a href="http://techandloathing.info/category/netcasts/feed/">Ogg Feed</a></h4></li>
   
- <li> <h4><a href="http://unseenstudio.co.uk/category/tuxjam-ogg/">TuxJam</a></h4>
+ <li><h4>TuxJam (Dead)</h4>
   <p>TuxJam is a show by Kevie which takes a look at some of the application and distros that have been released in the open source community and mixes in a variety of music to make the show 
   both informative and entertaining.</p>
-  <h4><a href="http://unseenstudio.co.uk/category/tuxjam-ogg/feed/">Ogg Feed</a></h4></li>
+  <h4>Ogg Feed (Dead)</h4></li>
   </ul>
   <br />
   <br />
