--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (63):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (66):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
@@ -33,7 +33,7 @@
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
           <li><a href="intermodal.html#GOV">US Government Sites</a> (5)</li>
-          <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (6)</li>
+          <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (9)</li>
           </ul>
           
 	  <br /><br /><br /><br />
@@ -140,8 +140,11 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Drayage">US Midwest Drayage Companies (6):</h3>
+	  <h3><a id="Drayage">US Midwest Drayage Companies (9):</h3>
+	  <p>C&amp;K Trucking <a href="http://cktrucking.com/">http://cktrucking.com/</a></p>
+	  <p>CST <a href="http://www.cstruck.com/">http://www.cstruck.com/</a></p>
 	  <p>ContainerPort Group <a href="http://www.containerport.com/">http://www.containerport.com/</a></p>
+	  <p>Cowan Systems <a href="http://www.cowansystems.com/">http://www.cowansystems.com/</a></p>
 	  <p>FORE Transportation <a href="http://www.foretransportation.com/">http://www.foretransportation.com/</a></p>
 	  <p>Hub Group <a href="http://www.hubgroup.com/">http://www.hubgroup.com/</a></p>
 	  <p>Reliable Transportation <a href="http://www.reliabletrans.com/">http://www.reliabletrans.com/</a></p>
