--- a/podcasts.html
+++ b/podcasts.html
@@ -55,6 +55,8 @@
           
           <h3><a id="Comedy">Comedy</a> (3):</h3>
           <p>The Adam Carolla Show <a href="http://adamcarolla.com/">http://adamcarolla.com/</a> <a href="http://theadamcarollashow.libsyn.com/rss">rss feed</a></p>
+          <p>Come to Papa with Tom Papa <a href="http://tompapa.com/">http://tompapa.com/</a> <a http://feeds.feedburner.com/soundcloud/CTP">rss feed</a></p>
+          <p>Doug Loves Movies <a href="http://douglovesmovies.com/">http://douglovesmovies.com/</a> <a href="http://feeds.feedburner.com/DougLovesMovies">rss feed</a></p>
           <p>The Joe Rogan Experience <a href="http://podcasts.joerogan.net/">http://podcasts.joerogan.net/</a> <a href="http://joeroganexp.joerogan.libsynpro.com/rss">rss feed</a></p>
           <p>The Ming and Mike Show <a href="http://www.mingandmike.com/">http://www.mingandmike.com/</a> <a href="http://feeds.feedburner.com/mingandmikeshow">rss feed</a></p>
           
