new links and fixed dead links

--- a/intermodal.html
+++ b/intermodal.html
@@ -21,7 +21,7 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (67):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (68):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
@@ -33,7 +33,7 @@
           <li><a href="intermodal.html#Software">Software</a> (2)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
           <li><a href="intermodal.html#GOV">US Government Sites</a> (5)</li>
-          <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (10)</li>
+          <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
           </ul>
           
 	  <br /><br /><br /><br />
@@ -140,12 +140,13 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Drayage">US Midwest Drayage Companies (10):</h3>
+	  <h3><a id="Drayage">US Midwest Drayage Companies (11):</h3>
 	  <p>C&amp;K Trucking <a href="http://cktrucking.com/">http://cktrucking.com/</a></p>
 	  <p>CST <a href="http://www.cstruck.com/">http://www.cstruck.com/</a></p>
 	  <p>ContainerPort Group <a href="http://www.containerport.com/">http://www.containerport.com/</a></p>
 	  <p>Cowan Systems <a href="http://www.cowansystems.com/">http://www.cowansystems.com/</a></p>
 	  <p>DNJ <a href="https://www.godnj.com/">https://www.godnj.com/</a></p>
+	  <p>Evans Delivery <a href="http://www.evansdelivery.com/">http://www.evansdelivery.com/</a></p>
 	  <p>FORE Transportation <a href="http://www.foretransportation.com/">http://www.foretransportation.com/</a></p>
 	  <p>Hub Group <a href="http://www.hubgroup.com/">http://www.hubgroup.com/</a></p>
 	  <p>Reliable Transportation <a href="http://www.reliabletrans.com/">http://www.reliabletrans.com/</a></p>
@@ -174,7 +175,6 @@
 					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>					
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
-					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
                                         <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
                                         <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
