--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
 	      <div id="main">
           <h3>About:</h3>
           <br />
-          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, Hot Rods, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Rat Rods, Scripting, T-Buckets, Unix, and Video Games.</p>
+          <p>Welcome to monsterb | daemons, gnus, and penguins. Oh my! Formerly known as monsterb.org. This site is a link portal dedicated to BSD, Cyber Security, Emulation, Ethical Hacking, FOSS, GNU, Hot Rods, illumos, Information Security, Infosec, IT Security, Linux, Podcasting, Programming, Oggcasting, OpenSource, Rat Rods, Scripting, T-Buckets, Unix, Video Games, and beyond.</p>
           <br />
-          <p>Site Updated: January 12, 2017</p>	  
+          <p>Site Updated: January 15, 2017</p>	  
 			 <br />
 
 	     </div>
@@ -47,7 +47,6 @@
 					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
-					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
 					<li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
 					<li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
