--- a/podcasts.html
+++ b/podcasts.html
@@ -21,12 +21,12 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (96):</h3>
+          <h3>Netcasts, Oggcasts, Podcasts, Webcasts (99):</h3>
           <br />
           <ul>
           <li><a href="podcasts.html#Automotive">Automotive, Auto Racing, Auto Repair</a> (4)</li>
           <li><a href="podcasts.html#BSD">BSD</a> (3)</li>
-          <li><a href="podcasts.html#Comedy">Comedy</a> (3)</li>
+          <li><a href="podcasts.html#Comedy">Comedy</a> (6)</li>
           <li><a href="podcasts.html#CyberSecurity">Cyber Security, Forensics, Hacking, InfoSec, PenTesting</a> (24)</li>
           <li><a href="podcasts.html#FOSS">FOSS, Misc. Tech, Open Source, and Programming</a> (9)</li>
           <li><a href="podcasts.html#Linux">GNU/Linux</a> (25)</li>
@@ -53,9 +53,10 @@
           
           <br /><br /><br /><br />
           
-          <h3><a id="Comedy">Comedy</a> (3):</h3>
+          <h3><a id="Comedy">Comedy</a> (6):</h3>
           <p>The Adam Carolla Show <a href="http://adamcarolla.com/">http://adamcarolla.com/</a> <a href="http://theadamcarollashow.libsyn.com/rss">rss feed</a></p>
-          <p>Come to Papa with Tom Papa <a href="http://tompapa.com/">http://tompapa.com/</a> <a http://feeds.feedburner.com/soundcloud/CTP">rss feed</a></p>
+          <p>The Church of What's Happening Now with Joey Coco Diaz <a href="http://thechurchofwhatshappeningnow.libsyn.com/">http://thechurchofwhatshappeningnow.libsyn.com/</a> <a href="http://thechurchofwhatshappeningnow.libsyn.com/rss">rss feed</a></p>
+          <p>Come to Papa with Tom Papa <a href="http://tompapa.com/">http://tompapa.com/</a> <a href="http://feeds.feedburner.com/soundcloud/CTP">rss feed</a></p>
           <p>Doug Loves Movies <a href="http://douglovesmovies.com/">http://douglovesmovies.com/</a> <a href="http://feeds.feedburner.com/DougLovesMovies">rss feed</a></p>
           <p>The Joe Rogan Experience <a href="http://podcasts.joerogan.net/">http://podcasts.joerogan.net/</a> <a href="http://joeroganexp.joerogan.libsynpro.com/rss">rss feed</a></p>
           <p>The Ming and Mike Show <a href="http://www.mingandmike.com/">http://www.mingandmike.com/</a> <a href="http://feeds.feedburner.com/mingandmikeshow">rss feed</a></p>
@@ -203,7 +204,6 @@
 					<li><a href="https://letsencrypt.org/" class="tooltip">Let's Encrypt<span>Let’s Encrypt is a new Certificate Authority: It’s free, automated, and open.</span></a></li>					
 					<li><a href="http://lhspodcast.info/" class="tooltip">Linux in the Ham Shack<span>A podcast designed to help amateur radio enthusiasts to migrate to Linux and Open Source from Microsoft or other closed-source software.</span></a></li>
 					<li><a href="http://www.linuxconfig.org/" class="tooltip">Linuxconfig.org<span>Blog, Commands, News, and Tutorials</span></a></li>
-					<li><a href="http://www.linuxplanet.org/blogs/" class="tooltip">LinuxPlanet Blogs<span>By Linux Geeks, For Linux Geeks.</span></a></li>
 					<li><a href="http://www.nuxified.org/" class="tooltip">Nuxified<span>If you use or have a particular interest in FOSS you might find Nuxified.org to be a valuable resource.</span></a></li>
                                         <li><a href="https://monsterb.github.io/ocp/" class="tooltip">Oggcast Planet<span>Injecting Vorbis into your eardrums since 2010.</span></a></li>
                                         <li><a href="https://www.eff.org/privacybadger" class="tooltip">Privacy Badger<span>Privacy Badger blocks spying ads and invisible trackers.</span></a></li>
