--- a/intermodal.html
+++ b/intermodal.html
@@ -21,16 +21,16 @@
 	     <a href="/notes/index.html">Notes</a>
 	     </div>
 	      <div id="main">
-          <h3>Drayage, Intermodal, Maritime, and Transportation (68):</h3>
+          <h3>Drayage, Intermodal, Maritime, and Transportation (75):</h3>
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
           <li><a href="intermodal.html#Biz">Forming Your Indiana Business</a> (3)</li>
           <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
-          <li><a href="intermodal.html#Magazines">Magazines</a> (8)</li>
+          <li><a href="intermodal.html#Magazines">Magazines</a> (14)</li>
           <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
           <li><a href="intermodal.html#Railroads">Railroads</a> (7)</li>
-          <li><a href="intermodal.html#Software">Software</a> (2)</li>
+          <li><a href="intermodal.html#Software">Software</a> (3)</li>
           <li><a href="intermodal.html#Classifieds">Truck Classifieds and Dealers</a> (12)</li> 
           <li><a href="intermodal.html#GOV">US Government Sites</a> (5)</li>
           <li><a href="intermodal.html#Drayage">US Midwest Drayage Companies</a> (11)</li>
@@ -71,15 +71,21 @@
 	  
 	  <br /><br /><br /><br />
         
-	  <h3><a id="Magazines">Magazines (8):</h3>
+	  <h3><a id="Magazines">Magazines (14):</h3>
+	  <p>10-4 Magazine <a href="http://www.tenfourmagazine.com/">http://www.tenfourmagazine.com/</a></p>
+	  <p>American Trucker <a href="http://trucker.com/">http://trucker.com/</a></p>
+	  <p>Fleet Owner <a href="http://fleetowner.com/">http://fleetowner.com/</a></p>
 	  <p>Heavy Duty Trucking <a href="http://www.truckinginfo.com/">http://www.truckinginfo.com/</a></p>
 	  <p>Logistics Management <a href="http://www.logisticsmgmt.com/">http://www.logisticsmgmt.com/</a></p>
 	  <p>Marine Insight <a href="http://www.marineinsight.com/">http://www.marineinsight.com/</a></p>
 	  <p>Maritime Executive <a href="http://www.maritime-executive.com/">http://www.maritime-executive.com/</a></p>
 	  <p>Maritime Journal <a href="http://www.maritimejournal.com/">http://www.maritimejournal.com/</a></p>
 	  <p>Maritime Reporter <a href="http://www.marinelink.com/">http://www.marinelink.com/</a></p>
+	  <p>Movin' Out <a href="http://www.movinout.com/">http://www.movinout.com/</a>
 	  <p>Overdrive <a href="http://www.overdriveonline.com/">http://www.overdriveonline.com/</a></p>
 	  <p>Progressive Railroading <a href="http://www.progressiverailroading.com/">http://www.progressiverailroading.com/</a></p>
+	  <p>RoadKing <a href="http://www.roadking.com/">http://www.roadking.com/</a></p>
+	  <p>Trucker Magazine <a href="http://truckermagazine.com/">http://truckermagazine.com/</a></p>
 	  
 	  <br /><br /><br /><br />
 	  
@@ -107,11 +113,13 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Software">Software (2):</h3>
+	  <h3><a id="Software">Software (3):</h3>
 	  <br />
 	  <p><a href="http://gnucash.org/">GnuCash</a> is personal and small-business financial-accounting software designed to be easy to use, yet powerful and flexible, GnuCash allows you to track bank accounts, stocks, income and expenses. As quick and intuitive to use as a checkbook register, it is based on professional accounting principles to ensure balanced books and accurate reports. GNUCash is freely licensed under the GNU GPL and available for Android, BSD, GNU/LInux, Solaris, OSX and Windows.</p>
 	  <br />
 	  <p><a href="https://kmymoney.org/">KMyMoney</a> strives to be the easiest open source personal finance manager to use, especially for the non-technical user.</p>
+	  <br />
+	  <p><a href="https://www.libreoffice.org/">LibreOffice</a> is a free and open source office suite, a project of The Document Foundation. It was forked from OpenOffice.org in 2010, which was an open-sourced version of the earlier StarOffice. The LibreOffice suite comprises programs for word processing, the creation and editing of spreadsheets, slideshows, diagrams and drawings, working with databases, and composing mathematical formulae. It is available in 110 languages.</p>
 	  
 	  <br /><br /><br /><br />
 	  
