--- a/intermodal.html
+++ b/intermodal.html
@@ -25,7 +25,8 @@
           <ul>
           <li><a href="intermodal.html#Associations">Associations</a> (4)</li>
           <li><a href="intermodal.html#Blogs">Blogs and News</a> (2)</li>
-          <li><a href="intermodal.html#Biz">Forming Your Indiana Business</a> (3)</li>
+          <li><a href="intermodal.html#Docs">Documents, eBooks, Informational Resources</a> (0)</li>
+          <li><a href="intermodal.html#Biz">Forming Your Indiana Trucking Business</a> (3)</li>
           <li><a href="intermodal.html#HazMat">Hazardous Material and Tanker Study Guides</a> (5)</li>
           <li><a href="intermodal.html#Magazines">Magazines</a> (14)</li>
           <li><a href="intermodal.html#Ocean">Ocean Freight Companies</a> (9)</li>
@@ -52,7 +53,13 @@
 	  
 	  <br /><br /><br /><br />
 	  
-	  <h3><a id="Biz">Forming Your Indiana Business (3):</h3>
+	  <h3><a id="Docs">Documents, eBooks, Informational Resources (0):</h3>
+	  <br/>
+	  <p>Intermodal Agent Guide v2.02 by The Evans Network of Companies <a href="EvansDeliveryAgentGuideBookVer2_02.pdf">pdf</a></p>
+	  
+	  <br /><br /><br /><br />
+	  
+	  <h3><a id="Biz">Forming Your Indiana Trucking Business (3):</h3>
 	  <br />
 	  <p><a href="http://www.in.gov/sos/business/2428.htm">AN ENTREPRENEUR'S GUIDE TO STARTING A BUSINESS IN INDIANA</a> by Connie Lawson (Indiana Secretary of State).</p>
 	  <br />
